--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" href="favicon.png" type="image/png">
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
     <!--fontes poppins google-->
-    <link href = "https: //fonts.googleapis.com/css2? family = Poppins: ital, wght @ 0,100; 0,200; 0,400; 500; 0,600; 0,700; 1,300; 1,400 & display = swap "rel =" stylesheet ">
-    <title>DevFinance$</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <title>DtMoney</title>
   </head>
   <body>
     <div id="root"></div>
